--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </md-toolbar>
 
         <div layout="row" flex ui-view></div>
+        <script src="http://localhost:8000/socket.io/socket.io.js">
 
+        </script>
         <script src="dist/bundle.js" charset="utf-8"></script>
     </body>
 </html>
