--- a/index.html
+++ b/index.html
@@ -22,13 +22,23 @@
                     </md-button>
                     <md-menu-content>
                         <md-menu-item>
-                            <md-button ui-sref="texter">
+                            <md-button class="md-primary"
+                                ui-sref="texter">
+                                <ng-md-icon icon="textsms"
+                                    style="fill: #F44336"
+                                    size="16">
+                                </ng-md-icon>
                                 Texter
                             </md-button>
                         </md-menu-item>
                         <md-divider></md-divider>
                         <md-menu-item>
-                            <md-button ui-sref="login">
+                            <md-button class="md-primary"
+                                ui-sref="login">
+                                <ng-md-icon icon="logout"
+                                    style="fill: #F44336"
+                                    size="16">
+                                </ng-md-icon>
                                 Logout
                             </md-button>
                         </md-menu-item>
