added icons to edit buttons

--- a/Texter/texter.html
+++ b/Texter/texter.html
@@ -22,6 +22,9 @@
                         <p>
                             <md-button class="edit-button md-accent md-mini"
                                 ng-click="openEditContactDialog(contact)">
+                                <ng-md-icon icon="edit"
+                                    style="fill: #FF9800"
+                                    size="17"></ng-md-icon>
                                 Edit
                             </md-button>
                         </p>
@@ -59,6 +62,9 @@
                         {{ script.text }}
                         <md-button class="edit-button md-accent md-mini"
                             ng-click="openEditScriptDialog(contact)">
+                            <ng-md-icon icon="edit"
+                                style="fill: #FF9800"
+                                size="17"></ng-md-icon>
                             Edit
                         </md-button>
                     </p>
