--- a/Texter/addScriptDialog.html
+++ b/Texter/addScriptDialog.html
@@ -6,7 +6,7 @@
         </md-input-container>
         <md-input-container>
             <label>Text</label>
-            <textarea ng-model="script.text"></textarea>
+            <textarea ng-model="script.content"></textarea>
         </md-input-container>
         <div class="md-actions">
             <md-button ng-click="save()">Save</md-button>
