prepared for demo

--- a/Texter/texter.html
+++ b/Texter/texter.html
@@ -62,7 +62,7 @@
                     <p>
                         {{ script.content }}
                         <md-button class="edit-button md-accent md-mini"
-                            ng-click="openEditScriptDialog(contact)">
+                            ng-click="openEditScriptDialog(script)">
                             <ng-md-icon icon="edit"
                                 style="fill: #FF9800"
                                 size="17"></ng-md-icon>
