--- a/Texter/editScriptDialog.html
+++ b/Texter/editScriptDialog.html
@@ -5,8 +5,8 @@
             <input type="text" ng-model="script.title">
         </md-input-container>
         <md-input-container>
-            <label>Text</label>
-            <textarea ng-model="script.text"></textarea>
+            <label>Content</label>
+            <textarea ng-model="script.content"></textarea>
         </md-input-container>
         <div class="md-actions">
             <md-button ng-click="update()">Update</md-button>
