fixed layout on login view

--- a/Login/login.html
+++ b/Login/login.html
@@ -1,4 +1,4 @@
-<md-content layout="column" flex="33" offset="33">
+<md-content layout="column" flex="33" flex-offset="33">
     <h2>Login</h2>
     <form name="loginForm" ng-submit="login()">
         <md-input-container>
