--- a/Texter/texter.html
+++ b/Texter/texter.html
@@ -118,15 +118,15 @@
                     size="40"></ng-md-icon>
 
                     <div class="md-list-item-text" layout="column">
-                        <h3>From: {{ text.From }}</h3>
-                        <h4>Sent: {{ text.timestamp | date:'short' }}</h4>
+                        <h3>From: {{ text.From || text.from }}</h3>
+                        <h4>Received: {{ text.timestamp | date:'short' }}</h4>
                         <div class="images" ng-show="text.images.length">
                             <div class="image"
                                 ng-repeat="image in text.images">
                                 <img ng-src="{{ image.url }}" alt="Media">
                             </div>
                         </div>
-                        <p>{{ text.Body }}</p>
+                        <p>{{ text.Body || text.body }}</p>
                     </div>
             </md-list-item>
         </md-list>
