--- a/Texter/scriptDialog.html
+++ b/Texter/scriptDialog.html
@@ -1,24 +1,47 @@
 <md-dialog>
     <md-dialog-content>
-        <form name="scriptForm" ng-submit="save()">
+        <form name="scriptForm" ng-submit="save()" novalidate>
             <md-input-container>
                 <label>Title</label>
-                <input type="text" ng-model="script.title">
+                <input name="title"
+                    type="text"
+                    ng-model="script.title"
+                    required>
+                <div ng-messages="scriptForm.title.$error"
+                    ng-show="scriptForm.title.$touched">
+                    <div ng-message="required">
+                        Title is required.
+                    </div>
+                </div>
             </md-input-container>
             <md-input-container>
                 <label>Text</label>
-                <textarea ng-model="script.content"></textarea>
+                <textarea name="text"
+                    ng-model="script.content"
+                    required></textarea>
+                <div ng-messages="scriptForm.content.$error"
+                    ng-show="scriptForm.content.$touched">
+                    <div ng-message="required">
+                        Text is required.
+                    </div>
+                </div>
             </md-input-container>
             <div class="md-actions">
                 <md-button class="md-raised"
                     ng-if="!script.id"
-                    type="submit">Save</md-button>
+                    type="submit"
+                    ng-disabled="scriptForm.$error.required[0].$invalid">
+                    Save
+                </md-button>
                 <md-button ng-if="script.id"
                     ng-click="remove()"
                     type="button">Remove</md-button>
                 <md-button class="md-raised"
                     ng-if="script.id"
-                    type="submit">Update</md-button>
+                    type="submit"
+                    ng-disabled="scriptForm.$error.required[0].$invalid">
+                    Update
+                </md-button>
             </div>
         </form>
     </md-dialog-content>
