added search to scripts and contacts; added count to scripts and contacts

--- a/Texter/contactDialog.html
+++ b/Texter/contactDialog.html
@@ -34,8 +34,7 @@
             <md-input-container>
                 <label>Group</label>
                 <md-select name="group"
-                    ng-model="contact.group"
-                    required>
+                    ng-model="contact.group">
                     <md-option ng-repeat="group in groups"
                         value="{{ group }}">
                         {{ group }}
