added Messages module

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Handke Texter</title>
     </head>
     <body layout="column">
-        <md-toolbar layout="row">
+        <md-toolbar layout="row" ng-controller="Navigation">
             <div class="md-toolbar-tools">
                 <h2>Handke Texter</h2>
                 <span flex></span>
@@ -20,27 +20,18 @@
                             md-menu-align-target>
                         </ng-md-icon>
                     </md-button>
-                    <md-menu-content>
-                        <md-menu-item>
+                    <md-menu-content class="nav-menu">
+                        <md-menu-item ng-repeat="item in navItems"
+                            flex layout="column">
                             <md-button class="md-primary"
-                                ui-sref="texter">
-                                <ng-md-icon icon="textsms"
+                                ui-sref="{{ item.sref }}">
+                                <ng-md-icon icon="{{ item.icon }}"
                                     style="fill: #F44336"
                                     size="16">
                                 </ng-md-icon>
-                                Texter
+                                {{ item.name }}
                             </md-button>
-                        </md-menu-item>
-                        <md-divider></md-divider>
-                        <md-menu-item>
-                            <md-button class="md-primary"
-                                ui-sref="login">
-                                <ng-md-icon icon="logout"
-                                    style="fill: #F44336"
-                                    size="16">
-                                </ng-md-icon>
-                                Logout
-                            </md-button>
+                            <md-divider></md-divider>
                         </md-menu-item>
                     </md-menu-content>
                 </md-menu>
