moved common methods from app.js to Common module

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>Handke Texter</title>
     </head>
     <body layout="column">
-        <md-toolbar layout="row" ng-controller="Navigation">
+        <md-toolbar layout="row"
+            ng-controller="NavigationCtrl"
+            ng-show="showNav">
             <div class="md-toolbar-tools">
                 <h2>Handke Texter</h2>
                 <span flex></span>
