--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -1,17 +1,22 @@
-<md-list class="incoming-list scroll">
-    <md-list-item ng-repeat="text in incoming">
-        <div class="md-list-item-text" layout="column">
-            <h3>
-                {{ text.contact.name }}
-            </h3>
-            <p>{{ text.createdAt | date:'short' }}</p>
-            <div class="images" ng-show="text.images.length">
-                <div class="image"
-                    ng-repeat="image in text.images">
-                    <img ng-src="{{ image.url }}" alt="Media">
+<div class="messages" flex>
+    <md-list class="incoming-list scroll" flex layout="column">
+        <md-list-item ng-repeat="text in incoming"
+            id="text-{{ $index }}"
+            ng-class="{ 'handke-message': text.contact.name === 'Handke' }"
+            class="message"
+            flex="30">
+            <div class="md-list-item-text">
+                <div class="name" ng-hide="text.contact.name === 'Handke'">
+                    {{ text.contact.name }} said,
+                </div>
+                <div>{{ text.body }}</div>
+                <div class="images" ng-show="text.images.length">
+                    <div class="image"
+                        ng-repeat="image in text.images">
+                        <img ng-src="{{ image.url }}" alt="Media">
+                    </div>
                 </div>
             </div>
-            <p>{{ text.body }}</p>
-        </div>
-    </md-list-item>
-</md-list>
+        </md-list-item>
+    </md-list>
+</div>
