--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             ng-controller="NavigationCtrl"
             ng-show="showNav">
             <div class="md-toolbar-tools">
-                <h2>Handke Texter</h2>
+                <h2>Handke Texter :: {{ phoneNumber }}</h2>
                 <span flex></span>
                 <md-menu>
                     <md-button class="md-icon-button"
