--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -1,3 +1,5 @@
-<md-content class="messages">
-    <ng-include src="'Messages/incoming-list.html'"></ng-include>
+<md-content class="messages" flex>
+    <div class="messages-container">
+        <ng-include src="'Messages/incoming-list.html'"></ng-include>
+    </div>
 </md-content>
