--- a/Login/login.html
+++ b/Login/login.html
@@ -1,17 +1,17 @@
 <md-content layout="column" flex="33" flex-offset="33">
     <h2>Login</h2>
-    <form name="loginForm" ng-submit="login()">
+    <form name="loginForm" ng-submit="login(user.username, user.password)">
         <md-input-container>
             <label for="username">Username</label>
             <input type="text"
                 name="username"
-                ng-model="credentials.username">
+                ng-model="user.username">
         </md-input-container>
         <md-input-container>
             <label for="password">Password</label>
             <input type="password"
                 name="password"
-                ng-model="credentials.password">
+                ng-model="user.password">
         </md-input-container>
         <md-button
             type="submit"
