--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </md-toolbar>
 
         <div layout="row" flex ui-view></div>
-        <script src="http://localhost:8000/socket.io/socket.io.js">
+        <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
 
         </script>
         <script src="dist/bundle.js" charset="utf-8"></script>
